--- a/index.html
+++ b/index.html
@@ -1,86 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abdul personal site</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Abu Siyama</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=merriweather!montserrat!sacramento" rel="stylesheet">
 </head>
-
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="pic-modified.png" alt="Abdul profile pictures"></td>
-      <td>
-        <h1>Abban Siyama</h1>
-        <p><em>founder of<strong> RG chemist</strong>.</em></p>
-        <P>I am a Medical Professioner and Web Developer. I Love coppee.</P>
-      </td>
-    </tr>
-  </table>
-  <hr size="3">
-  <h3>Education</h3>
-  <ul>
-    <li>Imam Science And Art</li>
-    <li>College Of Health Science Tsafe</li>
-  </ul>
-  <hr>
-  <h3>Work Experience</h3>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2013</td>
-        <td>General Hospital HGS Zaria </td>
-      </tr>
-      <tr>
-        <td>2016</td>
-        <td>Comprehensive Funtua</td>
-      </tr>
-    </tbody>
-    <tfoot>
-    </tfoot>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table>
-      <tr>
-         <td>Microbiology Laboratory</td>
-         <td>⭐⭐⭐⭐</td>
-      </tr>
-        </table>
-          <tr>
-         <td>Chemical Pathology</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-          <table>
-      <tr>
-            <td> Tranfussion</td>
-            <td>⭐⭐⭐⭐</td>
-          </tr>
-    </tr>
-  </table>
-  <hr size="3">
-  <h3>My Hobbies</h3>
-  <ol>
-    <li>Reading</li>
-    <li>Football</li>
-    <li>Playing Games</li>
-  </ol>
-  <ul>
-    <li><a
-        href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwjq3PrbzN73AhVPiVwKHbSuBMsQFnoECAMQAw&url=https%3A%2F%2Fwww.otago.ac.nz%2Foms%2Feducation%2Fmedlabsci%2Fundergraduate%2Fbmedlabsci%2Fchemical-pathology%2F&usg=AOvVaw2bb2fNOuPXndTVvcH4Yzg2">chemical
-        laboratory</a></li>
-  </ul>
-  <P>
-  <h3><strong><a href="Contact Me.html">Contact</a></strong></h3>
-  </P>
-</body>
+    <div id="top">
+    <img id="top-cloud" src="images/cloud2.png" alt="cccc">
+    <h1 id="abu">I'M ABU SIYAMA.</h1>
+    <p>a programmer.</p>
+    <img id="middle-cloud" src="images/cloud2.png" alt="cccc">
+    <img id="bottom-mmnnt" src="images/ppkk.png" alt="mountains">
+    </div>
+    <div id="middle-section">
+        <div id="profile">
+            <img id="left-pic-modified" src="images/pic-modified.png" alt="pic-modified">
+            <h2>Hello.</h2>
+            <p id="Intro">I am a medical profesional and a web developer. I'm the founder of</p>
+          <p>Rg chemical phamaceuticals. I always ❤️ mom and my lovely Siyama</p>
+        </div>
+<hr>
+<section>
+    <h2 id="myy">My Skills.</h2>
+    <div id="Skill-row">
+        <img id="code-img" src="https://ouch-cdn2.icons8.com/CMUG-qHEdo8GhBlrNpa-rUvnLEWQvk0VJl28RHdo4zg/rs:fit:256:256/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9wbmcvMzEx/Lzg3YmE1NzUyLTc1/OWYtNGY2OC05NTdm/LTI4NmZlNmIzNjFh/Yi5wbmc.png" alt="code-img">
+        <h3 id="ddd">Design & Development</h3>
+        <p id="aa">I Started Learning To Code When I Was 20 Years Old Because</p>
+        <P id="bb">I WantTo Become Among The World  developers On The Earth,</P> 
+        <p id="ih" >I have gained a wealth of experiance Designing develop website.</p>
+    
+    </div>
+</section>
+<section>
+     <div id="div4">
+        <img id="green" src="https://ouch-cdn2.icons8.com/rx_s2gTibyU4iprmkujw0yYNChl46Jz9LE9rnLS_eK0/rs:fit:256:199/czM6Ly9pY29uczgu/b3VjaC1wcm9kLmFz/c2V0cy9zdmcvNDcx/L2VlN2UzNGRiLTkz/MjEtNDRlNi04MTg5/LTQ5MDAzNWI0ZjQ4/MC5zdmc.png" alt="green">
+        <h3 id="hrr">Hot Tuwo Challange</h3>
+        <p id="hrh">My best skillls is actually in eating hot Tuwo. I'm the undisouted </p>
+        <P id="king"> king of hot Tuwo Challanges. kuka and kubewa </P>
+        <p id="web">Are my favorite soup</p>
+     </div>
+</section>
+<hr>
+<div id="Contact-me">
+<h2>Get In Touch</h2>
+<h3>If you love hot tuwo as much as i do.</h3>
+<p id="contact-message">Love hot tuwo as much as i do? lets talk about how awesome</p> 
+<p>they are! We can code while we eat hot Tuwo.</p>
+</div>
+ </div>
+<a class="btn btn-outline-info" href="mailto:abdulrg01@gmail.com" type="mail">Contact-me</a>
 
+    <div id="bottom-section">
+      <a id="footer-link" href="https://email.com">Email</a>
+      <a id="footer-link1" href="https://abdulrahmanabubakar719@gmail.com">facebook</a>
+      <p id="copyrite">c 2022 Abdulrahman Abubakar.</p>
+    </div>
+</body>
 </html>
